fix: stop long words from overflowing in description

--- a/src/pages/Todolist/components/Todolist.css
+++ b/src/pages/Todolist/components/Todolist.css
@@ -59,6 +59,7 @@
     max-width: 90%;
     top: calc(32px + 0.1vw);
     line-height: calc(0.7rem + 0.2vw);
+    word-break: break-word;
 }
 
 @media (max-width: 450px) {
